Фикс багов. Обновление генератора. Доработка схемы